Fixes on mobile phones.

--- a/src/less/content.less
+++ b/src/less/content.less
@@ -137,3 +137,14 @@ pre + .message, pre + .error {
 		border-right-width: 0;
 	}
 }
+
+@media only screen and (max-width: 360px) {
+	#content {
+		padding: 0 10px 20px;
+	}
+
+	h2 {
+		margin: 15px 0;
+		font-size: 16pt;
+	}
+}
