--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -234,4 +234,9 @@ p input, p select, p label, fieldset input, fieldset select {
 	textarea, pre[contenteditable="true"], select {
 		width: 100%;
 	}
+
+	input[type="submit"], fieldset input[type="submit"] {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 }
